cluster/apps/hardware/scanservjs/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: scanservjs
spec:
  selector:
    app.kubernetes.io/name: scanservjs
    app.kubernetes.io/instance: scanservjs
  type: ClusterIP
  ports:
    - protocol: TCP
      targetPort: http
